; ModuleID = '/home/carl/AnghaBench/linux/drivers/irqchip/extr_irq-renesas-intc-irqpin.c_intc_irqpin_dbg.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/irqchip/extr_irq-renesas-intc-irqpin.c_intc_irqpin_dbg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.intc_irqpin_irq = type { i32, i32, i32, %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 }

@.str = private unnamed_addr constant [15 x i8] c"%s (%d:%d:%d)\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.intc_irqpin_irq*, i8*)* @intc_irqpin_dbg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @intc_irqpin_dbg(%struct.intc_irqpin_irq* %0, i8* %1) #0 {
  %3 = alloca %struct.intc_irqpin_irq*, align 8
  %4 = alloca i8*, align 8
  store %struct.intc_irqpin_irq* %0, %struct.intc_irqpin_irq** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load %struct.intc_irqpin_irq*, %struct.intc_irqpin_irq** %3, align 8
  %6 = getelementptr inbounds %struct.intc_irqpin_irq, %struct.intc_irqpin_irq* %5, i32 0, i32 3
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 0
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load i8*, i8** %4, align 8
  %12 = load %struct.intc_irqpin_irq*, %struct.intc_irqpin_irq** %3, align 8
  %13 = getelementptr inbounds %struct.intc_irqpin_irq, %struct.intc_irqpin_irq* %12, i32 0, i32 2
  %14 = load i32, i32* %13, align 8
  %15 = load %struct.intc_irqpin_irq*, %struct.intc_irqpin_irq** %3, align 8
  %16 = getelementptr inbounds %struct.intc_irqpin_irq, %struct.intc_irqpin_irq* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.intc_irqpin_irq*, %struct.intc_irqpin_irq** %3, align 8
  %19 = getelementptr inbounds %struct.intc_irqpin_irq, %struct.intc_irqpin_irq* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 8
  %21 = call i32 @dev_dbg(i32* %10, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i8* %11, i32 %14, i32 %17, i32 %20)
  ret void
}

declare dso_local i32 @dev_dbg(i32*, i8*, i8*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
